k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: to-do-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

    
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers: 
        - name: frontend
          image: farzaan548/to-do-frontend:latest
          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 80
