k8s/frontend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: to-do-app
  labels:
    app: frontend

spec:
  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
  
  type: ClusterIP
