k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  namespace: to-do-app

spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
